# jobmaxxing

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  pyproject.toml
config/: jobspy.yaml  llm.yaml  routing.yaml  watchlist.yaml
docs/: PRD.md  ROADMAP.md  TECHNICAL_IMPLEMENTATION_PLAN.md
migrations/: 0001_create_jobs.sql  0002_views.sql  0003_funnel_views.sql  0004_enrichment.sql  0005_recovery.sql  0006_nightly_queue.sql  0007_trim_company_title.sql  0008_add_term.sql  0009_first_seen_at.sql  0010_url_verification.sql  0011_workday_tenant_cooldown.sql
resume_store/: README.md
rubrics/: ai.json  av.json  fdse.json  mle.json  quant-dev.json  quant-trader.json  robotics.json  swe.json
scripts/: com.jobmaxxing.nightly.plist  enrich_workday_loop.sh  spike_workday.py
tests/: test_ats.py  test_config.py  test_diffing.py  test_docker_layout.py  test_enrich_cli.py  test_enrich_db.py  test_enrichment_adapters.py  test_funnel.py  test_funnel_views.py  test_github_lists.py  test_gmail_config.py  test_gmail_discover.py  test_gmail_nightly.py  test_gmail_parse.py  test_integration.py  test_jobspy_config.py  test_jobspy_discover.py  test_jobspy_e2e.py  test_jobspy_parse.py  test_latex_compile.py  test_llm_caching.py  test_llm_claude_cli_e2e.py  test_llm_client.py  test_llm_config.py  test_llm_providers.py  test_llm_tailor_tasks.py  test_llm_text.py  test_mcp_query.py  test_mcp_queue_tools.py  test_mcp_routing_tools.py  test_mcp_server.py  test_mcp_skeleton.py  test_mcp_status_tools.py  test_mcp_tailor_tools.py  test_merge.py  (+54 more)
(+132 files in other folders)
