[project]
name = "jobmaxxing"
version = "0.1.0"
description = "Internship recruiting pipeline - core feed ingestion"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "anthropic>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-postgresql>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobmaxxing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
