[project]
name = "jobmaxxing"
version = "0.1.0"
description = "Internship recruiting pipeline - core feed ingestion"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=2.0",
    "anthropic>=0.40",
    "boto3>=1.34",
    "pypdf>=4.0",
    "mcp>=1.9",
]

[project.optional-dependencies]
headless = ["playwright>=1.40"]
sheets = ["gspread>=6", "google-auth>=2"]
web = ["flask>=3"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-postgresql>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobmaxxing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
